--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -1,18 +1,24 @@
-@media (max-width: 768px) and (orientation: portrait){
- #top-left-logo {
-  left: 50px;
-  background-size: 180px;
- }
-  
+.name-layer > a > span {
+  color: #37bbed;
 }
 
-@media (max-width: 768px) and (orientation: landscape){
+li.active > .capa-title > .name-layer > a > span {
+  color: #fafafa;
+}
 
+@media (max-width: 768px) and (orientation: portrait) {
   #top-left-logo {
-    left: 250px ;
+    left: 50px;
+    background-size: 180px;
   }
 }
 
-.active a{
-  color:white
+@media (max-width: 768px) and (orientation: landscape) {
+  #top-left-logo {
+    left: 250px;
+  }
+}
+
+.active a {
+  color: white;
 }
